# ChessClone

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  game_server.py  lichess.py  main.py  models.py  move_engine.py  profiler.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/: Board.svelte  api.ts  stores.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/play/: +page.svelte
frontend/src/routes/profile/: +page.svelte
